...

                        <AutoCompleteTextView
                            android:id="@+id/seach_subject"
                            android:layout_width="276dp"
                            android:layout_height="55dp"
...

                            <Spinner
                                android:id="@+id/spinner_type"
                                android:layout_width="match_parent"
                                android:layout_height="49dp"
...

                        <Button
                            android:id="@+id/engineering_btn"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
...

                        <Button
                            android:id="@+id/architecture_btn"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
...

                        <Button
                            android:id="@+id/education_btn"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
...

                        <Button
                            android:id="@+id/agricultural_techno_btn"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
...

                        <Button
                            android:id="@+id/science_btn"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
...

                        <Button
                            android:id="@+id/agriculture_btn"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
...

                        <Button
                            android:id="@+id/it_btn"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
...

                        <Button
                            android:id="@+id/international_btn"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
...

                        <Button
                            android:id="@+id/nano_techno_btn"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
...

                        <Button
                            android:id="@+id/production_inno_btn"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
...

                        <Button
                            android:id="@+id/management_btn"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
...

                        <Button
                            android:id="@+id/inter_flight_btn"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
...

                        <Button
                            android:id="@+id/liberal_arts_btn"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
...
