<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kmitl.projectfinal.se.kmitlbackyard.view.MeFragment">

    <com.santalu.emptyview.EmptyView
        android:id="@+id/layout_content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:loadingText="กำลังบันทึกข้อมูล"
        app:loadingTextColor="@color/colorAccent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/user"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/plus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/plus_img"
            app:layout_constraintEnd_toStartOf="@+id/history_img"
            app:layout_constraintTop_toTopOf="@+id/circleImageView2" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/history_img"
            android:layout_width="75dp"
            android:layout_height="87dp"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="68dp"
            android:src="@drawable/bubble"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/email_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView2" />

        <kmitl.projectfinal.se.kmitlbackyard.view.CustomTextView
            android:id="@+id/profile_email"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="58070118@kmitl.ac.th"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/nickname_profile"
            app:layout_constraintBottom_toTopOf="@+id/save_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_email"
            app:layout_constraintVertical_bias="0.265" />

        <EditText
            android:id="@+id/profile_nickname"
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="ชื่อเล่น (ชื่อนี้จะถูกนำไปแสดงผล)"
            android:text="BDLoneR"
            android:textColor="#6c6c6c"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.382"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/profile_email" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/colorAccent"
            android:text="บันทึกข้อมูล"
            android:textColor="#ffffff"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/logout_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="76dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/colorAccent"
            android:text="ออกจากระบบ"
            android:textColor="#ffffff"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

    </com.santalu.emptyview.EmptyView>

</FrameLayout>
