<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_action_home"
        android:title="หน้าแรก" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_action_news"
        android:title="รีวิวล่าสุด" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_action_me"
        android:title="ประวัติส่วนตัว" />

</menu>
